# pyVDERM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
examples/: 01_quickStart.ipynb  02_boundaryConditions.ipynb  04_tracking.ipynb  05_pyVDERMlite.ipynb  cube.stl  cube.xyz
pyVDERM/: __init__.py  core.py  visualization.py
tests/: conftest.py  test1.py  test_core.py  test_interpolation.py  test_io.py  test_vizualization.py
